@@ -49,6 +49,7 @@ from astrapy.data.info.table_descriptor.table_indexes import (
     TableIndexDefinition,
     TableIndexDescriptor,
     TableIndexOptions,
+    TableIndexType,
     TableUnsupportedIndexDefinition,
     TableVectorIndexDefinition,
     TableVectorIndexOptions,
@@ -101,6 +102,7 @@ __all__ = [
     "TableIndexDefinition",
     "TableIndexDescriptor",
     "TableIndexOptions",
+    "TableIndexType",
     "TableInfo",
     "TableKeyValuedColumnType",
     "TableKeyValuedColumnTypeDescriptor",
